--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,9 @@
 
 {% block body %}
     <p>To begin a chat please specify your display name</p>
-    <form id="form">
-      <input id="name" autocomplete="off" autofocus placeholder="Enter your display name" type="text">
+    <form id="form" action="{{ url_for('signin') }}" method="post">
+      <input id="name" name="username" autocomplete="off" autofocus placeholder="Enter your display name" type="text">
       <input type="submit" name="" value="Submit">
     </form>
-    <p id="greeting"></p>
     <script src="{{ url_for('static', filename='index.js') }}"></script>
 {% endblock %}
