Modified route of channel to /signin/channel_name

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -2,6 +2,7 @@
 
 {% block heading %}
     You are on channel {{ channel }}
+    <script src="{{ url_for('static', filename='username.js') }}"></script>
 {% endblock %}
 
 {% block body %}
