--- a/templates/signin.html
+++ b/templates/signin.html
@@ -26,7 +26,7 @@
       Create a channel
     </p>
     <form class="" action="{{ url_for('create_channel') }}" method="post">
-      <input type="text" name="channel_name" value="">
+      <input type="text" autocomplete="off" placeholder="Enter channel name" name="channel_name" value="">
       <input type="submit" name="" value="Submit">
     </form>
 
