Made a few modifications, still doesn't show messages on the channel page

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -16,9 +16,9 @@
   <ul id="messages">
   </ul>
 </p>
-<form id="message_form">
+<form id="form">
   <input id="message" name="message" autocomplete="off" autofocus placeholder="Enter your message" type="text">
-  <input type="submit" name="" value="Submit">
+  <input type="submit" value="Send">
 </form>
     <button type="button" class="btn btn-primary" onclick="goBack()">Go back</button>
     <script>
